--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "codemirror": "^5.53.2",
     "immutable": "^4.0.0-rc.12",
     "include-media": "^1.4.9",
+    "marked": "^1.0.0",
     "open-color": "^1.7.0",
+    "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
